--- a/migrate.yaml
+++ b/migrate.yaml
@@ -2,23 +2,33 @@ mongodb-enterprise:
   flat: false
   path: mongodb-enterprise/mongodb-enterprise-8_fak4bk
   versions: [1.1.0, 1.2.1, 1.2.2, 1.2.3, 1.2.4, 1.3.0, 1.3.1, 1.4.0, 1.4.1, 1.4.2, 1.4.3, 1.4.4, 1.4.5, 1.5.1, 1.5.2, 1.5.3, 1.5.4, 1.5.5, 1.6.0, 1.6.1, 1.7.0, 1.7.1]
+  token:
+  PID:
 
 portworx-certified:
   flat: false
   path: portworx-certified/portworx-certified-yj6pq0au
   versions: [1.0.0, 1.0.3, 1.0.4, 1.0.5, 1.0.6, 1.1.0, 1.1.1, 1.2.0, 1.3.0, 1.3.2, 1.3.3, 1.3.4]
+  token:
+  PID:
 
 couchdb-operator-certified:
   flat: true
   path: couchdb-operator-certified
   versions: [0.2.0, 1.0.0, 1.0.1, 1.0.10, 1.0.11, 1.0.12, 1.0.13, 1.0.14, 1.0.2, 1.0.3, 1.0.6, 1.0.7, 1.1.0, 1.2.0, 1.2.1]
+  token:
+  PID:
 
 appsody-operator-certified:
   flat: true
   path: appsody-operator-certified
   versions: [0.1.0, 0.2.0, 0.2.1, 0.2.2, 0.3.0, 0.4.0, 0.4.1, 0.5.0, 0.5.1, 0.6.0, 0.6.1]
+  token:
+  PID:
 
 perceptilabs-operator-package:
   flat: true
   path: perceptilabs-operator-package
   versions: [1.0.10, 1.0.11, 1.0.12, 1.0.13, 1.0.14, 1.0.15, 1.0.16]
+  token:
+  PID:
